@@ -283,6 +283,8 @@ Tools/Demos
 Documentation
 -------------
 
+- Issue #13538: Improve str() and object.__str__() documentation.
+
 - Issue #16489: Make it clearer that importlib.find_loader() requires any and
   all packages to be separately imported.
 
